--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-jupyterlab==3.5.0
-jupyter-contrib-nbextensions==0.7.0	
-jupyterthemes==0.20.0
-jupyter-server==1.23.3
-notebook==6.4.1
+#jupyterlab==3.5.0
+#jupyter-contrib-nbextensions==0.7.0	
+#jupyterthemes==0.20.0
+#jupyter-server==1.23.3
+#notebook==6.4.1
 numpy==1.21.4
 pandas==1.5.3
 scikit-optimize==0.9.0
