--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,11 @@
+name: deep_bucket_env
 channels:
  - conda-forge
  - defaults
 dependencies:
  - python=3.9*
  - jupyterlab
- - jupyter_contrib_nbextensions
+# - jupyter_contrib_nbextensions
  - notebook
  - numpy
  - pandas
