--- a/src/configuration.yml
+++ b/src/configuration.yml
@@ -3,67 +3,68 @@ g: 9.807
 time_step: 1
 model:
   num_classes: 2
-  input_size: 2
-  hidden_state_size: 152
+  input_size: 6
+  hidden_state_size: 16
   num_layers: 2
-  num_epochs: 5
+  num_epochs: 120
   batch_size: 256
-  seq_length: 2
+  seq_length: 12
   learning_rate:
     start: 0.1
-    end: 0.001
-    num_steps: 1
-# input_vars: ['precip', 'et', 'A_bucket', 'A_spigot', 'H_bucket', 'H_spigot', 'K_infiltration', 'ET_parameter']
-input_vars: ['precip', 'et']
+    step_size: 1
+    gamma: 0.96
+#input_vars: ['precip', 'et', 'A_bucket', 'A_spigot', 'H_bucket', 'H_spigot', 'K_infiltration', 'ET_parameter']
+#input_vars: ['precip', 'et']
+input_vars: ['precip', 'A_spigot', 'H_bucket', 'H_spigot', 'K_infiltration', 'ET_parameter']
 output_vars: ['q_overflow', 'q_spigot']
 device:
   use_cuda: true
 
 synthetic_data:
   train:
-    n_buckets: 5
-    num_records: 300
+    n_buckets: 50
+    num_records: 560
     bucket_attributes:
-      A_bucket: [1.5, 1.6]
-      A_spigot: [0.15, 0.16]
-      H_bucket: [5.5, 5.6]
-      H_spigot: [1.0, 1.1]
-      K_infiltration: [1e-7, 1e-8]
-      ET_parameter: [7, 8]
+      A_bucket: [1.0, 2.0]
+      A_spigot: [0.1, 0.2]
+      H_bucket: [5.0, 6.0]
+      H_spigot: [1.0, 3.0]
+      K_infiltration: [1e-7, 1e-9]
+      ET_parameter: [7, 9]
     rain_probability:
       None: [0.6, 0.7]
-      Light: [0.5, 0.6]
+      Light: [0.5, 0.8]
       Heavy: [0.2, 0.3]
     rain_depth:
       Light: [0, 2]
       Heavy: [2, 8]
     noise:
-        pet: 0.02
-        et: 0.02
-        q: 0.02
-        head: 0.02
+        pet: 0.1
+        et: 0.1
+        q: 0.1
+        head: 0.1
   val:
-    n_buckets: 3
+    n_buckets: 5
     num_records: 150
     bucket_attributes:
-      A_bucket: [1.5, 1.6]
-      A_spigot: [0.15, 0.16]
-      H_bucket: [5.5, 5.6]
-      H_spigot: [1.0, 1.1]
-      K_infiltration: [1e-7, 1e-8]
-      ET_parameter: [7, 8]
+      A_bucket: [1.0, 2.0]
+      A_spigot: [0.1, 0.2]
+      H_bucket: [5.0, 6.0]
+      H_spigot: [1.0, 3.0]
+      K_infiltration: [1e-7, 1e-9]
+      ET_parameter: [7, 9]
     rain_probability:
       None: [0.6, 0.7]
-      Light: [0.5, 0.6]
+      Light: [0.5, 0.8]
       Heavy: [0.2, 0.3]
     rain_depth:
       Light: [0, 2]
       Heavy: [2, 8]
     noise:
-        pet: 0.02
-        et: 0.02
-        q: 0.02
-        head: 0.02
+        pet: 0.1
+        et: 0.1
+        q: 0.1
+        head: 0.1
   test:
     n_buckets: 3
     num_records: 150
