--- a/src/configuration.yml
+++ b/src/configuration.yml
@@ -3,27 +3,27 @@ g: 9.807
 time_step: 1
 model:
   num_classes: 2
-  input_size: 6
+  input_size: 8
   hidden_state_size: 16
   num_layers: 2
-  num_epochs: 120
+  num_epochs: 25
   batch_size: 256
-  seq_length: 12
+  seq_length: 8
   learning_rate:
     start: 0.1
     step_size: 1
     gamma: 0.96
-#input_vars: ['precip', 'et', 'A_bucket', 'A_spigot', 'H_bucket', 'H_spigot', 'K_infiltration', 'ET_parameter']
+input_vars: ['precip', 'et', 'A_bucket', 'A_spigot', 'H_bucket', 'H_spigot', 'K_infiltration', 'ET_parameter']
 #input_vars: ['precip', 'et']
-input_vars: ['precip', 'A_spigot', 'H_bucket', 'H_spigot', 'K_infiltration', 'ET_parameter']
+#input_vars: ['precip', 'A_spigot', 'H_bucket', 'H_spigot', 'K_infiltration', 'ET_parameter']
 output_vars: ['q_overflow', 'q_spigot']
 device:
   use_cuda: true
 
 synthetic_data:
   train:
-    n_buckets: 50
-    num_records: 560
+    n_buckets: 20
+    num_records: 400
     bucket_attributes:
       A_bucket: [1.0, 2.0]
       A_spigot: [0.1, 0.2]
