--- a/src/configuration.yml
+++ b/src/configuration.yml
@@ -3,34 +3,33 @@ g: 9.807
 time_step: 1
 model:
   num_classes: 2
-  input_size: 8
+  input_size: 2
   hidden_state_size: 16
   num_layers: 2
-  num_epochs: 25
+  num_epochs: 50
   batch_size: 256
-  seq_length: 8
+  seq_length: 32
   learning_rate:
     start: 0.1
     step_size: 1
     gamma: 0.96
-input_vars: ['precip', 'et', 'A_bucket', 'A_spigot', 'H_bucket', 'H_spigot', 'K_infiltration', 'ET_parameter']
-#input_vars: ['precip', 'et']
+#input_vars: ['precip', 'et', 'A_bucket', 'A_spigot', 'H_bucket', 'H_spigot', 'K_infiltration', 'ET_parameter']
+input_vars: ['precip', 'et']
 #input_vars: ['precip', 'A_spigot', 'H_bucket', 'H_spigot', 'K_infiltration', 'ET_parameter']
 output_vars: ['q_overflow', 'q_spigot']
 device:
   use_cuda: true
-
 synthetic_data:
   train:
-    n_buckets: 20
+    n_buckets: 9
     num_records: 400
     bucket_attributes:
-      A_bucket: [1.0, 2.0]
-      A_spigot: [0.1, 0.2]
-      H_bucket: [5.0, 6.0]
-      H_spigot: [1.0, 3.0]
-      K_infiltration: [1e-7, 1e-9]
-      ET_parameter: [7, 9]
+      A_bucket: [1.0, 1.0]
+      A_spigot: [0.1, 0.1]
+      H_bucket: [5.0, 5.0]
+      H_spigot: [1.0, 1.0]
+      K_infiltration: [1e-7, 1e-7]
+      ET_parameter: [7, 7]
     rain_probability:
       None: [0.6, 0.7]
       Light: [0.5, 0.8]
@@ -39,20 +38,20 @@ synthetic_data:
       Light: [0, 2]
       Heavy: [2, 8]
     noise:
-        pet: 0.1
-        et: 0.1
-        q: 0.1
-        head: 0.1
+        pet: 0
+        et: 0
+        q: 0
+        head: 0
   val:
-    n_buckets: 5
-    num_records: 150
+    n_buckets: 3
+    num_records: 400
     bucket_attributes:
-      A_bucket: [1.0, 2.0]
-      A_spigot: [0.1, 0.2]
-      H_bucket: [5.0, 6.0]
-      H_spigot: [1.0, 3.0]
-      K_infiltration: [1e-7, 1e-9]
-      ET_parameter: [7, 9]
+      A_bucket: [1.0, 1.0]
+      A_spigot: [0.1, 0.1]
+      H_bucket: [5.0, 5.0]
+      H_spigot: [1.0, 1.0]
+      K_infiltration: [1e-7, 1e-7]
+      ET_parameter: [7, 7]
     rain_probability:
       None: [0.6, 0.7]
       Light: [0.5, 0.8]
@@ -61,29 +60,29 @@ synthetic_data:
       Light: [0, 2]
       Heavy: [2, 8]
     noise:
-        pet: 0.1
-        et: 0.1
-        q: 0.1
-        head: 0.1
+        pet: 0
+        et: 0
+        q: 0
+        head: 0
   test:
     n_buckets: 3
-    num_records: 150
+    num_records: 400
     bucket_attributes:
-      A_bucket: [1.5, 1.6]
-      A_spigot: [0.15, 0.16]
-      H_bucket: [5.5, 5.6]
-      H_spigot: [1.0, 1.1]
-      K_infiltration: [1e-7, 1e-8]
-      ET_parameter: [7, 8]
+      A_bucket: [1.0, 1.0]
+      A_spigot: [0.1, 0.1]
+      H_bucket: [5.0, 5.0]
+      H_spigot: [1.0, 1.0]
+      K_infiltration: [1e-7, 1e-7]
+      ET_parameter: [7, 7]
     rain_probability:
       None: [0.6, 0.7]
-      Light: [0.5, 0.6]
+      Light: [0.5, 0.8]
       Heavy: [0.2, 0.3]
     rain_depth:
       Light: [0, 2]
       Heavy: [2, 8]
     noise:
-        pet: 0.02
-        et: 0.02
-        q: 0.02
-        head: 0.02
+        pet: 0
+        et: 0
+        q: 0
+        head: 0
