trying to get unit hydro working

--- a/configuration/configuration.yml
+++ b/configuration/configuration.yml
@@ -27,6 +27,7 @@ model:
 output_vars:
 - q_spigot
 - q_overflow
+unit_hydrograph_distribution_file: "/home/jmframe/deep_bucket_lab/distributions/scs484.csv"
 synthetic_data:
   test:
     bucket_attributes:
